# Resume-Streamlit

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bandit.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
deploy/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/overlays/prod/: kustomization.yaml
resources/: config.py
src/resume_streamlit/: __init__.py  main.py
src/resume_streamlit/resources/: config.py
src/resume_streamlit/styles/: main.css
styles/: main.css
